syntax = "proto3";
package pb;
option go_package = "../pb";


message Packet{
  int32 type = 1;
  oneof body{
    Heartbeat heartbeat = 2;
    Command command = 3;
    Message message = 4;
  }
}

message Heartbeat{
  int32 value = 1;
}


message Command {
  string commandId = 1;
  string commandType = 2;
  int32 code = 3;
  string message = 4;
  oneof request {
    LoginRequest loginRequest = 5;
    LogoutRequest logoutRequest = 6;
  }
  oneof reply {
    LoginReply loginReply = 7;
    LogoutReply logoutReply = 8;
  }
}


message Message{
  string messageId = 1;
  string messageType = 2;
  int32 needAck = 3;
  string appId = 4;
  int32 flow = 5;
  int64 userId = 6;
  string convId = 7;
  int64 to = 8;
  int64 groupId = 9;
  int64 sequence = 10;
  int64 cTime = 11;
  int64 sTime = 12;
  repeated At at = 13;
  repeated Refer refer = 14;
  int32 code = 15;
  string message = 16;
  oneof content {
    Text text = 17;
    Image image = 18;
    Audio audio = 19;
    Video video = 20;
  }
}


message At {
  int64 userId = 1;
  string name = 2;
  string avatar = 3;
}

message Refer {
  int64 userId = 1;
  string name = 2;
  string avatar = 3;
  string cType = 4;
  oneof content {
    Text text = 5;
    Image image = 6;
    Audio audio = 7;
    Video video = 8;
  }
}

message Text {
  string text = 1;
}

message Image {
  string url = 1;
  int32 width = 2;
  int32 height = 3;
}

message Audio {
  string url = 1;
  int32 length = 2;
}

message Video {
  string url = 1;
  string cover = 2;
  int32 length = 3;
  int32 width = 4;
  int32 height = 5;
}


message LoginRequest {
  string appId = 1;
  string userSig = 2;
  string version = 3;
  string os = 4;
  string deviceId = 5;
}

message LoginReply{
  string appId = 1;
  int64 userId = 2;
}

message LogoutRequest {
  string appId = 1;
  int64 userId = 2;
  string os = 3;
  string deviceId = 4;
}

message LogoutReply {
}